--- a/index.css
+++ b/index.css
@@ -67,7 +67,6 @@ padding: 50px;
 	background-repeat: no-repeat;
 	background-size: cover;
     width: 230px;
-    height: 160px;
     color: rgb(0, 0, 0);
     font-size: 20px;
     border-radius:4px ;
@@ -82,6 +81,7 @@ padding: 50px;
 
 .blur{
     backdrop-filter: blur(3px);
+    height:100%;
 }
 
 
